--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <img src="images/image3.jpg" alt="Slide 3">
     </div>
     <div class="overlay">
-      <button onclick="window.location.href='getstarted.html'">Get Started</button>
+      <button onclick="window.location.href='login.html'">Get Started</button>
     </div>
   </div>
 
