--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     .overlay {
       position: absolute;
-      top: 0;
+      top: 100; 
       left: 0;
       width: 100%;
       height: 100%;
@@ -122,7 +122,9 @@
       z-index: 2;
     }
 
+
     .overlay button {
+      margin-top: 150px; 
       padding: 1rem 2rem;
       font-size: 1.5rem;
       background-color: #F5F5DC;
@@ -157,13 +159,13 @@
   <!-- Slideshow Section -->
   <div class="slideshow-container">
     <div class="slide active">
-      <img src="images/image1.jpg" alt="Slide 1">
+      <img src="https://media.istockphoto.com/id/503646746/photo/farmer-spreading-fertilizer-in-the-field-wheat.jpg?b=1&s=612x612&w=0&k=20&c=ISo0xFDU33Pe6TlsfCQas3yu8JclOOededZvS6IRTs4=" alt="Slide 1">
     </div>
     <div class="slide">
-      <img src="images/image2.jpg" alt="Slide 2">
+      <img src="https://images.pexels.com/photos/2382904/pexels-photo-2382904.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
     </div>
     <div class="slide">
-      <img src="images/image3.jpg" alt="Slide 3">
+      <img src="https://images.pexels.com/photos/221016/pexels-photo-221016.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 3">
     </div>
     <div class="overlay">
       <button onclick="window.location.href='login.html'">Get Started</button>
@@ -181,6 +183,10 @@
     }
 
     setInterval(showNextSlide, 4000);
+
+
+
+    
   </script>
 
 </body>
