--- a/login.html
+++ b/login.html
@@ -9,7 +9,6 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url("images/loginbackgroundimage.jpg");
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
@@ -17,7 +16,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      backdrop-filter: blur(5px);
+      transition: background-image 0.5s ease;
     }
 
     .login-box {
@@ -42,76 +41,53 @@
       font-weight: 600;
     }
 
-   /* Toggle Switch Container */
-.toggle-switch {
-  position: relative;
-  width: 40px;    /* smaller width */
-  height: 20px;   /* smaller height */
-  margin: 15px auto 30px auto;
-}
+    /* Toggle Switch Container */
+    .toggle-switch {
+      position: relative;
+      width: 40px;
+      height: 20px;
+      margin: 15px auto 30px auto;
+    }
 
-/* Hide default checkbox */
-.toggle-switch input[type="checkbox"] {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
+    .toggle-switch input[type="checkbox"] {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
 
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #6536f4; /* red by default (Buyer) */
-  border-radius: 34px;
-  transition: 0.4s;
-  border: 2px solid #4d30b5;
-}
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #6536f4;
+      border-radius: 34px;
+      transition: 0.4s;
+      border: 2px solid #4d30b5;
+    }
 
-/* The circle */
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 16px;   /* smaller knob */
-  width: 16px;
-  left: 2px;
-  bottom: 2px;
-  background-color: #fff;
-  border-radius: 50%;
-  transition: 0.4s;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 16px;
+      width: 16px;
+      left: 2px;
+      bottom: 2px;
+      background-color: #fff;
+      border-radius: 50%;
+      transition: 0.4s;
+    }
 
-/* Checked state */
-.toggle-switch input:checked + .slider {
-  background-color: #4caf50; /* green when ON (Farmer) */
-  border-color: #3a7d31;
-}
+    .toggle-switch input:checked + .slider {
+      background-color: #4caf50;
+      border-color: #3a7d31;
+    }
 
-.toggle-switch input:checked + .slider:before {
-  transform: translateX(20px); /* slide knob right */
-}
-
-/* Labels inside toggle */
-.toggle-labels {
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-  font-size: 0.7rem;  /* smaller font size */
-  margin-top: 4px;
-  color: #555;
-  user-select: none;
-  padding: 0 5px;
-}
-
-.toggle-labels span {
-  width: 20px; /* smaller width */
-  text-align: center;
-}
-
+    .toggle-switch input:checked + .slider:before {
+      transform: translateX(20px);
+    }
 
     input[type="text"],
     input[type="password"] {
@@ -134,15 +110,24 @@
       margin-left: 5px;
     }
 
-    .login-box button.login-btn {
+    .login-btn {
       width: 100%;
-      background-color: #2c5f2d;
-      color: white;
       padding: 10px;
       border: none;
       margin-top: 15px;
       border-radius: 5px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .login-btn.buyer {
+      background-color: #3f51b5; /* Blue */
+      color: white;
+    }
+
+    .login-btn.farmer {
+      background-color: #4caf50; /* Green */
+      color: white;
     }
 
     .login-box .signup {
@@ -164,11 +149,11 @@
   </style>
 </head>
 
-<body>
+<body id="page-body">
+
   <div class="login-box">
     <h1 style="display: flex; align-items: center; justify-content: center; gap: 10px;">
-      <span
-        style="width: 60px; height: 60px; border-radius: 50%; background-color: #284f45; border: 3px solid #3a7464; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+      <span style="width: 60px; height: 60px; border-radius: 50%; background-color: #284f45; border: 3px solid #3a7464; display: flex; align-items: center; justify-content: center; overflow: hidden;">
         <img src="images/logo.jpg" alt="CropSet Logo" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;" />
       </span>
       <span style="color: #2c5f2d; font-weight: bold; font-size: 1.8rem;">CropSet</span>
@@ -179,7 +164,6 @@
     <div class="toggle-switch">
       <input type="checkbox" id="role-toggle" />
       <label for="role-toggle" class="slider"></label>
-      
     </div>
 
     <input type="text" id="email" placeholder="Email" />
@@ -191,7 +175,7 @@
       <label for="remember">Remember me</label>
     </div>
 
-    <button class="login-btn" onclick="login()">Login</button>
+    <button class="login-btn buyer" id="login-button" onclick="login()">Login</button>
 
     <div class="signup">New here? <a href="#">Create an account</a></div>
   </div>
@@ -199,15 +183,23 @@
   <script>
     const toggle = document.getElementById('role-toggle');
     const roleText = document.getElementById('role-text');
+    const body = document.getElementById('page-body');
+    const loginButton = document.getElementById('login-button');
 
-    // Set initial role text based on toggle default state (unchecked = Buyer)
-    roleText.textContent = toggle.checked ? 'Login as Farmer' : 'Login as Buyer';
+    // Set initial background and button
+    body.style.backgroundImage = 'url("")'; 
 
     toggle.addEventListener('change', () => {
       if (toggle.checked) {
         roleText.textContent = 'Login as Farmer';
+        body.style.backgroundImage = 'url("images/farmer.jpg")';
+        loginButton.classList.remove('buyer');
+        loginButton.classList.add('farmer');
       } else {
         roleText.textContent = 'Login as Buyer';
+        body.style.backgroundImage = 'url("images/buyer.jpg")';
+        loginButton.classList.remove('farmer');
+        loginButton.classList.add('buyer');
       }
     });
 
@@ -222,7 +214,6 @@
         return;
       }
 
-      // Dummy validation
       if (email === "test@example.com" && password === "1234") {
         alert("Login successful!");
         error.style.display = "none";
