--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </a>
     <div class="navbar-links">
       <a href="#about"><b>About</b></a>
-      <a href="#contact"><b>Contact Us</b></a>
+      <a href="contact.html"><b>Contact Us</b></a>
     </div>
   </nav>
 
