--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         }
 
         .contact-section {
-            background: url('https://images.pexels.com/photos/831056/pexels-photo-831056.jpeg') no-repeat center center;
+            background: url("https://images.pexels.com/photos/927805/pexels-photo-927805.jpeg?auto=compress&cs=tinysrgb&w=600") no-repeat center center;
             background-size: cover;
             height: 100vh;
             display: flex;
