--- a/login.html
+++ b/login.html
@@ -177,7 +177,7 @@
 
     <button class="login-btn buyer" id="login-button" onclick="login()">Login</button>
 
-    <div class="signup">New here? <a href="#">Create an account</a></div>
+    <div class="signup">New here? <a href="newaccount.html">Create an account</a></div>
   </div>
 
   <script>
