--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <span>CropSet</span>
     </a>
     <div class="navbar-links">
-      <a href="#about"><b>About</b></a>
+      <a href="about.html"><b>About</b></a>
       <a href="contact.html"><b>Contact Us</b></a>
     </div>
   </nav>
