Adding the dashboardfeature

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
     <div class="slide">
       <img src="https://images.pexels.com/photos/221016/pexels-photo-221016.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 3">
     </div>
-    <div class="overlay">
-      <button onclick="window.location.href='/login'">Get Started</button>
+
+     <div class="overlay">
+      <button class="login-btn1" onclick="window.location.href='/loginfarmer'">Login as Farmer</button>
+      <button class="login-btn2" onclick="window.location.href='/loginbuyer'">Login as Buyer</button>
     </div>
-  </div>
+
+     </div>
+
+
 
   <script src="/js/script.js"></script>
 </body>
